# np

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
NP/: settings.py  wsgi.py
navprayas/: apps.py  models.py  urls.py  views.py
navprayas/migrations/: 0001_initial.py
navprayas/static/css/: main.css  main.less  styles.css
navprayas/static/js/: bootstrap.min.js  main.js
navprayas/templates/navprayas/: about.html  base.html  contact.html  events.html  home.html  index.html  notifications.html  team.html
navprayas/templates/navprayas/exam_forms/: FHS_register.html  MTSE_register.html  PR_register.html  SPR_register.html  chess_register.html  rangotsav_register.html
navprayas/templates/navprayas/home_links/: about.html  events.html  index.html
navprayas/templates/navprayas/users/: login.html  profile.html  signup.html
np/: settings.py  urls.py
