[tool.poetry]
name = "np"
version = "0.1.0"
description = "Web app for navprayas"
authors = [
    "Anurag Kumar <anuragkr.bk@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
